# pyroute2-cni

./: .flake8  .gitignore  .mypy-check-paths  .pre-commit-config.yaml  05-chain.conflist  CHANGELOG.rst  Dockerfile  Makefile  README.md  README.rst  VERSION  noxfile.py  pyproject.toml  requirements.dev.txt  requirements.docs.txt  requirements.txt  setup.cfg  start.sh  tags
docs/: architecture.rst  conf.py  index.rst  quickstart.rst
docs/_static/: custom.css
examples/: example-daemonset.yaml  example-namespace.yaml  tenant.yaml  vrfdomain.yaml  vrfnodeconfig.yaml
examples/frr/: create-vrf.sh  daemons  frr.conf
examples/scripts/: create-ubuntu-vm.sh  k8s_init.sh  k8s_prepare.sh
image/: Dockerfile  start.sh
images/cni/: start.sh
images/frr/: Containerfile  handle-command  init  probe.py
kubernetes/: config.yaml  crd.yaml  daemonset.yaml  example-namespace.yaml  install.sh  namespace.yaml  pyroute2-cni.yaml  rbac.yaml
learning/: Dockerfile  README.rst  setup.cfg
learning/my_plugin/: cni.py
pyroute2-cni-gateway/: main.py  server.py
pyroute2-cni-plugin/: Makefile  go.mod  pyroute2-cni-plugin.go
pyroute2_cni/: address_pool.py  cniconfig.py  config_defaults.py  firewall.py  frr_manager.py  kubernetes.py  namespace_controller.py  namespace_manager.py  network.py  protocols.py  request.py  server.py  vrf_controller.py  vrf_domain.py  vrf_manager.py
pyroute2_cni/controllers/: base_crd_controller.py  cniconfig_controller.py  cniconfigselection_controller.py  namespace_controller.py  vrf_controller.py  vrf_routing_policy_controller.py  (+2 more)
pyroute2_plugin/: pyroute2-cni-plugin.go
pyroute2_plugin_rust/: Cargo.toml  README.md  build.sh
pyroute2_plugin_rust/src/: main.rs
tests/: conftest.py
(+39 files in other folders)
