[metadata]
name = pyroute2-cni
version = file: VERSION
description = PyRoute2 CNI
long_description = file: README.md
author = Peter Saveliev
author_email = peter@svinota.eu
long_description_content_type = text/x-rst
url = https://github.com/svinota/pyroute2-cni
license = Apache-2.0
classifiers =
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Networking
    Topic :: System :: Systems Administration
    Operating System :: POSIX :: Linux
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Development Status :: 4 - Beta

[options]
packages_dir =
    =pyroute2_cni
packages = find:

[options.entry_points]
console_scripts =
    pyroute2-cni = pyroute2_cni.server:run
