[package]
name = "pyroute2-cni-plugin"
version = "0.1.0"
edition = "2021"
description = "CNI plugin for pyroute2"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nix = "0.26.2"

# [profile.release]
# opt-level = 3
# lto = true
# codegen-units = 1
# panic = "abort"
# strip = true

[target.x86_64-unknown-linux-musl]
rustflags = ["-C", "target-feature=+crt-static"]
